[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "surgery_needle"
version = "0.1.0"
description = "Surgery needle reach task for Isaac Lab"
requires-python = ">=3.10"
dependencies = [
    "isaaclab",
    "isaaclab_tasks",
    "isaaclab_assets",
    "isaaclab_rl",
]
